SUBDIRS = c

EXTRA_DIST = \
	pkg-def.scm \
	scheme/xlib/colormap.scm \
	scheme/xlib/cursor.scm \
	scheme/xlib/display.scm \
	scheme/xlib/gcontext.scm \
	scheme/xlib/pixmap.scm \
	scheme/xlib/sync-event.scm \
	scheme/xlib/window.scm \
	scheme/xlib/xlib-interfaces.scm \
	scheme/xlib/text.scm \
	scheme/xlib/graphics.scm \
        scheme/xlib/event-types.scm \
        scheme/xlib/event.scm \
        scheme/xlib/font.scm \
        scheme/xlib/grab.scm \
        scheme/xlib/key.scm \
        scheme/xlib/property.scm \
        scheme/xlib/utility.scm \
        scheme/xlib/visual.scm \
        scheme/xlib/wm.scm \
        scheme/xlib/error.scm \
        scheme/xlib/client.scm \
        scheme/xlib/region.scm \
        scheme/xlib/atom.scm \
        scheme/xlib/xlib-packages.scm \
        scheme/xlib/extension.scm \
        scheme/examples/hello.scm \
        scheme/examples/picture.scm \
        scheme/examples/regions.scm \
        scheme/examples/scxev.scm \
        scheme/examples/hello-xft.scm \
        scheme/libs/libs-interfaces.scm \
        scheme/libs/libs-packages.scm \
        scheme/libs/xpm.scm \
        scheme/libs/xft.scm \
        scheme/libs/xrender.scm \
	scheme/libs/weak-table.scm \
        scheme/xt/widget-type.scm \
        scheme/xt/widget.scm \
        scheme/xt/resource-types.scm

